--- a/angularAR/android/app/src/main/assets/capacitor.config.json
+++ b/angularAR/android/app/src/main/assets/capacitor.config.json
@@ -4,7 +4,7 @@
 	"webDir": "dist/angularAR",
 	"bundledWebRuntime": false,
 	"server": {
-		"url": "http://192.168.178.76:4200",
+		"url": "https://192.168.178.76:4200",
 		"cleartext": true
 	}
 }
