--- a/angularAR/package.json
+++ b/angularAR/package.json
@@ -21,11 +21,14 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "@awesome-cordova-plugins/camera-preview": "^5.39.0",
     "@capacitor/android": "^3.4.0",
     "@capacitor/camera": "^1.2.4",
     "@capacitor/core": "^3.4.0",
     "@capacitor/ios": "^3.4.0",
+    "cordova-plugin-camera-preview": "^0.12.3",
     "firebase": "^9.4.0",
+    "hamburgers": "^1.1.3",
     "rxfire": "^6.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
